# brian2-symbode

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: walkthrough.ipynb
src/brian2_symbode/: __init__.py  extractor.py
tests/: conftest.py  test_extractor.py
